--- a/moja 24h/stylesheet.css
+++ b/moja 24h/stylesheet.css
@@ -12,6 +12,18 @@
         flex-direction: row;
     }
 
+    h1 {
+        font-size: 40px;
+        font-family: arial black, sans-serif;
+    }
+    h2 {
+        font-size: 18px;
+        font-family: arial black, sans-serif;
+    }
+    p {
+        font-size: 15px;
+    }
+
 .header {
     background-color: #ffffff;
     color: #000000;
@@ -24,9 +36,10 @@
 }
 
 .separator {
-    width: 100%;
-    border: 1px solid #767676;
-    margin-bottom: 20px ;     
+    width: 157%;
+    border: 2px solid #8080801f;
+    margin-bottom: 20px ;  
+    margin-left: -30%;   
     box-sizing: content-box;
 }
 
@@ -55,6 +68,12 @@
     width: 30px; 
     height: auto; 
     margin: 5;
+}
+
+.plus {
+    background-color: #ffa600;
+    padding: 16px;
+    margin: 0px 0;
 }
 
 main {
@@ -144,12 +163,13 @@ main {
 }
 
 .reklama {
-    background-color: #ffa600; 
+    background-color: #ffe100; 
     color: #000000;
+    font-size: 18px;
+    font-family: arial black, sans-serif;
     text-align: center;
-    padding: 10px;
+    padding: 0px;
 }
-
 
 @media only screen and (min-width: 961px) {
     .page {
@@ -161,41 +181,134 @@ main {
       height: 50px;
     }
 
+    .section-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
     .feature-1 {
-        width: 55%;
+        width: 64%;
         position: relative;
+        display: flex;
+        flex-direction: column;
+        margin-right: 1%;
     }
     
     .feature-1 img {
         width: 100%; 
         height: auto; 
-        display: block; 
-    }
+        display: flex; 
+    } 
 
     .feature-2,
     .feature-3 {
-      width: 35%;
+      width: 34%;
       display: flex;
       flex-direction: column;
+      margin-left: 1%;
+      margin-bottom: 4%;
+    }
+
+    .feature-3 {
+        margin-top: 4%;
+    }
+    
+    .feature-3 img {
+        width: 40%;
+        height: 50%;
+    }
+
+    .headline {
+        display: flex;
+        flex-direction: row;
     }
 
     .feature-4,
     .feature-7,
     .feature-8 {
-        width: 35%;
-        display: felx;
-        flex-direction: column;
-    }
-    .feature-4 img {
-        width: 100%;
-        height: auto;
-        display: block;
-    }
-    .feature-5,
-    .feature-6 {
-        width: 20%;
+        width: 36%;
         display: flex;
         flex-direction: column;
     }
-}
 
+    .feature-4 {
+        margin-right: 1%;
+    }
+
+    .feature-4 h2 {
+        font-size: 25px;
+    }
+
+    .feature-4 img {
+        width: 100%;
+        height: auto;
+        display: flex;
+    }
+
+    .feature-7,
+    .feature-8 {
+        margin-left: 1%;
+        margin-right: 0%;
+        margin-bottom: 4%;
+    }
+
+    .feature-5,
+    .feature-6 {
+        width: 22%;
+        display: flex;
+        flex-direction: column;
+        margin-left: 2%;
+        margin-right: 2%;
+        margin-bottom: 4%;
+    }
+
+    .feature-6,
+    .feature-8 {
+        margin-top: 4%;
+    }
+
+     .right-sections .feature-8 .headline img{
+        width: 30%;
+        height: 30%;
+    }   
+
+    .row {
+        display: flex;
+        flex-direction: row;
+    } 
+
+    .right-sections > div {
+        width: 100%;
+    }
+
+    .row > .feature-1 {
+        width: 200%;
+    }
+
+    .first > .right-sections {
+        width: 30%;
+    }
+
+    .row .feature-4 {
+        width: 138%;
+    }
+
+    .second .middle {
+        margin-right: 2%;
+    }
+
+    .middle .feature-6 img {
+        height: 150px;
+    }
+
+    }
+
+    .second .last {
+        width: 138%;
+    }
+    .second {
+        padding-right: 0px;
+        margin-right: 0px;
+    }
+   }
